kubernetes/backatcha-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: backatcha-server
  labels:
    app: backatcha-server
    tier: backend
spec:
  type: ClusterIP
  ports:
    - port: 8081
  selector:
    app: backatcha-server
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backatcha-server
spec:
  replicas: 1
  selector:
    matchLabels:
          app: backatcha-server
  template:
    metadata:
      labels:
        app: backatcha-server
        tier: backend
    spec:
      containers:
        - name: demo
          image: bcanvural/backatcha-server:latest #Point to a public docker image registry
          ports:
            - containerPort: 8080
