kubernetes/site-only-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: site-only
  labels:
    app: site-only
    tier: backend
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: site-only
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site-only
spec:
  replicas: 1
  selector:
    matchLabels:
          app: site-only
  template:
    metadata:
      labels:
        app: site-only
        tier: backend
    spec:
      containers:
        - name: hippo
          image: bcanvural/site-only:v10 #Point to a public docker image registry
          ports:
            - containerPort: 8080
            - containerPort: 5005
              name: "jvm-debug" #Uncomment two lines for remote debugger
          readinessProbe:
            httpGet:
              path: /site/ping/
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 5
            failureThreshold: 18
          livenessProbe:
            httpGet:
              path: /site/ping/
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
            failureThreshold: 5
